--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -5,6 +5,12 @@
     "menu": {
       "home": "Inicio",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
+      "courses": {
+        "main": "Cursos",
+        "multipleChoice": "Opción Múltiple",
+        "multipleAnswer": "Respuesta Múltiple",
+        "jhipster-needle-menu-add-entry": "JHipster will add additional courses here (do not translate!)"
+      },
       "entities": {
         "main": "Entidades",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
