FEAT: Se agregó pantalla principal de cursos, estilos pendientes

--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -5,10 +5,8 @@
     "menu": {
       "home": "Inicio",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
-      "courses": {
+      "main": {
         "main": "Cursos",
-        "multipleChoice": "Opción Múltiple",
-        "practitioner": "Practicario",
         "jhipster-needle-menu-add-entry": "JHipster will add additional courses here (do not translate!)"
       },
       "entities": {
